# eventpp

./: .gitignore  .tasks  CMakeLists.txt  README.md
include/: data.hpp  emitter.hpp  eventpp.hpp  observer.hpp
include/eventpp/: data.hpp  eventpp.hpp  manager.hpp  token.hpp
src/: data.cpp  emitter.cpp  observer.cpp
src/eventpp/: data.cpp  manager.cpp  token.cpp
test/: CMakeLists.txt  data.cpp  events.cpp  tests.cpp
